[package]
name = "rss_f"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
env_logger = "0.11.3"
futures = "0.3.30"
log = "0.4.21"
maud = "0.26.0"
mysql = "25.0.1"
serde = "1.0.203"
tokio = "1.38.0"
tracing-subscriber = "0.3.18"

[dependencies.mongodb]
version = "2.8.2"
#features = ["tokio-sync"]
